[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "agora-create-a-tool-safety-circuit-breaker-for"
version = "0.1.0"
description = "Create a Tool-Safety Circuit Breaker for Agent Tool Calls"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [

]

[tool.setuptools]
py-modules = ["main"]
